--- a/app/src/main/res/layout/activity_tip_calculator.xml
+++ b/app/src/main/res/layout/activity_tip_calculator.xml
@@ -116,6 +116,15 @@
         android:layout_alignLeft="@+id/tipTextView"
         android:padding="5dp"
         android:text="@string/total_amount"
-        android:textSize="20sp" />    
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/buttonSaveTip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/buttonSaveTip" />
 
 </RelativeLayout>
